--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.16.0",
-    "firebase-admin": "^5.12.0",
+    "express-session": "^1.15.6",
+    "firebase": "^4.5.0",
+    "firebase-admin": "^5.4.2",
     "http-errors": "~1.6.2",
+    "moment": "^2.22.1",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "striptags": "^3.1.1"
   }
 }
