--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prestart": "node getEnv",
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.6.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
